# pennywise

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: deploy.yaml
src/: process_txn_email.py
src/pennywise/: config.py  generate_monthly_reports.py  process_txn_email.py
src/pennywise/prompts/: extract_transaction_details.txt
src/prompts/: extract_transaction_details.txt
tests/: conftest.py  test_generate_monthly_reports.py  test_process_txn_email.py
